--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,6 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
     "lodash": "^4.17.5",
-    "mongoose": "^5.0.9"
+    "mongoose": "^5.11.9"
   }
 }
