--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
     "lodash": "^4.17.5",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.11.9",
+    "path": "^0.12.7"
   }
 }
